feat: prepare the preset for mentoring